# jsbox

./: .dockerignore  .gitattributes  .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.satoken  Handoff.md  READ-USAGE.md  README.md  Taskfile.yml  clippy.toml  config.example.json  deny.toml  docker-compose.yml  e2e_auth.sh  ideas.md  next_session.md  rustfmt.toml  smoke_4b.sh  smoke_5.sh  smoke_quic.sh  smoke_satoken.sh  stress_breaker_esm.py  stress_test.py  sweep.sh  test_simple.py
.claude/commands/: sys-plan.md  sys-rules.md
.claude/commands/ai/: handoff.md
.claude/commands/opsx/: decide.md
.github/workflows/: ci.yml  integration.yml  release.yml
.serena/: project.yml
container/: README.md  config.json  docker-compose.yml  hasura_example.js  minio.sh  run.sh  tsconfig.json  types.d.ts
container/tests/amq/: context.json  script.js
container/tests/api/: context.json  script.js
container/tests/auth/: context.json  script.js
container/tests/core/: context.json  script.js
container/tests/db/: script.js
container/tests/delete/: context.json  script.js
container/tests/email/: context.json  script.js
container/tests/redis/: context.json  script.js
container/tests/s3/: context.json  script.js
container/tests/sys/: context.json  script.js
container/tests/sys-env/: script.js
container/tests/usage/: script.js
crates/fabric-backends/: Cargo.toml
crates/fabric-backends/src/: amq.rs  auth.rs  backendset.rs  db.rs  kv.rs  lib.rs  mail.rs  mongo.rs  resources.rs  sa_token.rs  wire.rs
crates/fabric-wire/: Cargo.toml
crates/fabric-wire/src/: ct.rs  egress.rs  errors.rs  lib.rs  metrics.rs  quic.rs  wire.rs
crates/fabricd/: Cargo.toml
crates/fabricd/src/: auth.rs  main.rs
crates/runlet/: Cargo.toml
crates/runlet-bench/: Cargo.toml
crates/runlet-bench/benches/: bytecode.rs
crates/runlet-core/: CONSUMER_NOTES.md  Cargo.toml
crates/runlet-core/src/: amq.rs  auth.rs  breaker.rs  bytecode.rs  bytesize.rs  config.rs  db.rs  decimal.rs  egress.rs  engine.rs  errors.rs  host.rs  http.rs  inproc.rs  kv.rs  lib.rs  mail.rs  metrics.rs  modules.rs  mongo.rs  partition.rs  pool.rs  registry.rs  resource.rs  s3.rs  sandbox.rs  sys.rs
crates/runlet-core/src/js/: amq.js  api.js  auth.js  db.js  decimal.js  determinism.js  io.js  mail.js  mongo.js  redis.js  resource.js  s3.js  sys.js
crates/runlet/src/: authz.rs  config.rs  events.rs  handler.rs  identity.rs  main.rs  quota.rs  sidecar.rs  telemetry.rs  uds.rs
deploy/: networkpolicy-pool-jsbox.yaml
docs/: 01-getting-started.md  02-api.md  03-database.md  04-mail.md  05-decimal.md  06-s3.md  07-redis.md  08-amq.md  09-sys.md  10-auth.md  11-hasura.md  12-mongo.md  99-errors.md  README.md  deployment.md  error-envelope.md  modules.md  security-hardening.md
docs-sys/: .gitignore  ai_memory.md  rfc.md  rules.md
docs/design/: injectable-modules.md  multitenant-trust.md  network-fabric.md  nexus-upstream-requirements.md  pooled-capabilities.md  product-ideas.md  resilience.md  resource-egress.md  script-registry.md
modules/hasura/: client.mjs
openspec/: config.yaml  guidelines.md
openspec/changes/archive/2026-07-01-otel-tracing-and-structured-logs/: tasks.md
openspec/changes/archive/2026-07-01-per-tenant-metering-audit/: design.md  tasks.md
openspec/changes/archive/2026-07-01-per-tenant-metering-audit/specs/tenant-metering/: spec.md
openspec/changes/archive/2026-07-01-rename-jsbox-to-runlet/: design.md  tasks.md
openspec/changes/archive/2026-07-01-rename-jsbox-to-runlet/specs/observability/: spec.md
openspec/changes/archive/2026-07-01-runlet-n5-acting-org-assurance/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-01-runlet-n5-acting-org-assurance/specs/tenant-identity/: spec.md
openspec/changes/otel-tracing-and-structured-logs/: design.md  proposal.md  tasks.md
openspec/changes/otel-tracing-and-structured-logs/specs/observability/: spec.md
openspec/changes/per-tenant-metering-audit/: proposal.md  tasks.md
openspec/changes/per-tenant-metering-audit/specs/tenant-audit/: spec.md
openspec/changes/rename-jsbox-to-runlet/: proposal.md  tasks.md
openspec/changes/runlet-nexus-multitenant-trust/: design.md  proposal.md  tasks.md
openspec/changes/runlet-nexus-multitenant-trust/specs/execution/: spec.md
openspec/changes/runlet-nexus-multitenant-trust/specs/resilience/: spec.md
openspec/changes/runlet-nexus-multitenant-trust/specs/tenant-egress/: spec.md
openspec/changes/runlet-nexus-multitenant-trust/specs/tenant-identity/: spec.md
openspec/changes/runlet-nexus-multitenant-trust/specs/tenant-quota/: spec.md
openspec/specs/amq/: spec.md
openspec/specs/api/: spec.md
openspec/specs/auth/: spec.md
openspec/specs/db/: spec.md
openspec/specs/decimal/: spec.md
openspec/specs/execution/: spec.md
openspec/specs/mail/: spec.md
openspec/specs/module-registry/: spec.md
openspec/specs/mongo/: spec.md
openspec/specs/observability/: spec.md
openspec/specs/redis/: spec.md
openspec/specs/resilience/: spec.md
openspec/specs/s3/: spec.md
openspec/specs/script-registry/: spec.md
openspec/specs/sys/: spec.md
openspec/specs/tenant-audit/: spec.md
openspec/specs/tenant-egress/: spec.md
openspec/specs/tenant-identity/: spec.md
openspec/specs/tenant-metering/: spec.md
openspec/specs/tenant-quota/: spec.md
scripts/: format_markdown.py  format_markdown.sh
src/: amq.rs  auth.rs  breaker.rs  bytesize.rs  config.rs  db.rs  decimal.rs  engine.rs  errors.rs  handler.rs  http.rs  kv.rs  mail.rs  main.rs  metrics.rs  modules.rs  mongo.rs  partition.rs  pool.rs  registry.rs  s3.rs  sandbox.rs  ssrf.rs  sys.rs  tenant.rs
src/js/: amq.js  api.js  auth.js  bridge.js  db.js  decimal.js  mail.js  mongo.js  redis.js  s3.js
supply-chain/: config.toml
tests/modules/acme/: pricing.mjs
tests/scripts/: greet.js
tests/scripts/acme/billing/: pricing.js
