[package]
name = "jsbox"
version = "0.0.0"
edition = "2024"
rust-version = "1.92"
description = "A strict Rust JS execution service powered by QuickJS"
license = "MIT"
repository = "https://github.com/user/jsbox"
keywords = ["quickjs", "javascript", "scripting", "rust"]
categories = ["development-tools"]

[dependencies]
axum = { version = "0.8", features = ["json"] }
crossbeam-queue = "0.3"
mimalloc = { version = "0.1", default-features = false }
rquickjs = { version = "0.11.0", features = [
    "classes",
    "properties",
    "rust-alloc",
    "parallel",
] }
base64 = "0.22"
bytes = "1"
chrono = { version = "0.4", default-features = false }
postgres = { version = "0.19", features = [
    "with-serde_json-1",
    "with-chrono-0_4",
    "with-uuid-1",
] }
postgres_rustls = "0.1"
rustls = "0.23"
tokio-rustls = "0.26"
webpki-roots = "1"
reqwest = { version = "0.13", default-features = false, features = [
    "json",
    "blocking",
    "rustls",
] }
rust_decimal = { version = "1", features = ["db-postgres"] }
serde = { version = "1", features = ["derive"] }
uuid = { version = "1" }
serde_json = "1"
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "net",
    "signal",
] }
tracing = "0.1"
tracing-subscriber = "0.3"

# ──────────────────────────────────────────────────────────────
# Rustc lints — deny everything allowed-by-default that matters
# ──────────────────────────────────────────────────────────────
[lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"
unused = { level = "deny", priority = -1 }
nonstandard_style = { level = "deny", priority = -1 }
rust_2024_compatibility = { level = "deny", priority = -1 }
let_underscore_drop = "deny"
elided_lifetimes_in_paths = "deny"
explicit_outlives_requirements = "deny"
macro_use_extern_crate = "deny"
meta_variable_misuse = "deny"
missing_abi = "deny"
missing_copy_implementations = "deny"
missing_debug_implementations = "deny"
non_ascii_idents = "deny"
single_use_lifetimes = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unreachable_pub = "deny"
unsafe_op_in_unsafe_fn = "deny"
unused_crate_dependencies = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_qualifications = "deny"
unused_results = "deny"
variant_size_differences = "warn"

# ──────────────────────────────────────────────────────────────
# Clippy lint groups
# ──────────────────────────────────────────────────────────────
[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }

# Allow nursery lint that conflicts with rustc unreachable_pub
redundant_pub_crate = "allow"
# Transitive deps may pull multiple versions of the same crate
multiple_crate_versions = "allow"

# ── Cherry-picked restriction lints (never enable the whole group) ──
# Panics / unwraps / unfinished code
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unwrap_in_result = "deny"

# Printing / IO
print_stdout = "deny"
print_stderr = "deny"
verbose_file_reads = "deny"

# Indexing / arithmetic / casts
indexing_slicing = "deny"
arithmetic_side_effects = "deny"
as_conversions = "deny"
float_cmp_const = "deny"
fn_to_numeric_cast_any = "deny"
lossy_float_literal = "deny"

# Strings / allocations
str_to_string = "deny"
string_add = "deny"
string_slice = "deny"
format_push_string = "deny"

# Unsafe / soundness
undocumented_unsafe_blocks = "deny"
multiple_unsafe_ops_per_block = "deny"

# Shadowing
shadow_reuse = "deny"
shadow_same = "deny"
shadow_unrelated = "deny"

# Lint suppression — "no cheating"
allow_attributes = "deny"
allow_attributes_without_reason = "deny"

# Code quality / style
clone_on_ref_ptr = "deny"
create_dir = "deny"
deref_by_slicing = "deny"
empty_drop = "deny"
empty_structs_with_brackets = "deny"
error_impl_error = "deny"
exit = "deny"
filetype_is_file = "deny"
get_unwrap = "deny"
if_then_some_else_none = "deny"
impl_trait_in_params = "deny"
infinite_loop = "deny"
large_include_file = "deny"
let_underscore_must_use = "deny"
mem_forget = "deny"
min_ident_chars = "deny"
missing_assert_message = "deny"
missing_docs_in_private_items = "deny"
mixed_read_write_in_expression = "deny"
multiple_inherent_impl = "deny"
mutex_atomic = "deny"
needless_raw_strings = "deny"
partial_pub_fields = "deny"
rc_buffer = "deny"
rc_mutex = "deny"
redundant_type_annotations = "deny"
rest_pat_in_fully_bound_structs = "deny"
same_name_method = "deny"
self_named_module_files = "deny"
semicolon_outside_block = "deny"
tests_outside_test_module = "deny"
try_err = "deny"
unnecessary_safety_comment = "deny"
unnecessary_safety_doc = "deny"
unnecessary_self_imports = "deny"
unneeded_field_pattern = "deny"
unseparated_literal_suffix = "deny"
wildcard_enum_match_arm = "deny"
missing_trait_methods = "deny"
iter_over_hash_type = "deny"
absolute_paths = "deny"
ref_patterns = "deny"
renamed_function_params = "deny"

# ──────────────────────────────────────────────────────────────
# Profiles
# ──────────────────────────────────────────────────────────────
[profile.dev]
debug = true
overflow-checks = true

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
opt-level = 3
overflow-checks = true
