[package]
name = "fabric-wire"
description = "Shared egress-port wire contract for runlet: the Egress trait, the tagged-error envelope, the error taxonomy primitives, the per-target circuit breaker, and the metric collector — depended on by both runlet-core and fabric-backends, with no driver or QuickJS code"
readme = "../../README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

# A leaf crate: pure Rust + serde, no network drivers and no QuickJS. This is the shared
# substrate the sandbox (runlet-core) and the driver host (fabric-backends, eventually
# fabricd) both depend on — see docs/design/resource-egress.md.
[dependencies]
serde.workspace = true
serde_json.workspace = true
# For the box↔fabricd UDS wire framing (`wire.rs`): `io-util` provides the `AsyncReadExt`/
# `AsyncWriteExt` traits (`read_exact`/`write_all`). Added explicitly so a deterministic-core build
# (which doesn't unify the drivers' tokio features) still has them. Not a driver.
tokio = { workspace = true, features = ["io-util"] }
# QUIC remote transport (`quic.rs`): the network alternative to the local UDS, on the shared
# `aws-lc-rs` rustls provider. `rustls`/`sha2` back the pinned-self-signed-cert verifier; PEM
# loading uses `rustls::pki_types::pem` (no separate crate). See `docs/design/network-fabric.md`.
quinn.workspace = true
rustls.workspace = true
sha2.workspace = true
# The one shared constant-time equality primitive (`ct` module), adopted per design D4 — reused
# by the box's edge-credential check and `fabricd`'s static-token check.
subtle.workspace = true

[dev-dependencies]
# Mints a self-signed cert for the QUIC round-trip test.
rcgen.workspace = true
tokio = { workspace = true, features = ["io-util", "macros", "rt", "net"] }

[lints]
workspace = true
