[package]
name = "runlet"
description = "A strict Rust JS execution service powered by QuickJS — HTTP front for runlet-core"
readme = "../../README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "runlet"
path = "src/main.rs"

[dependencies]
runlet-core = { path = "../runlet-core" }
# The driver-backed egress backends (the `*Config`/`*Metric` types + the in-process `BackendSet`)
# the binary wires behind the egress port; the drivers the binary links come through here, not
# `runlet-core`. `fabric-wire` gives the `Egress`/`EgressError` the UDS client (`uds.rs`) implements.
fabric-backends = { path = "../fabric-backends" }
fabric-wire = { path = "../fabric-wire" }
axum.workspace = true
mimalloc.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
rustls.workspace = true

[lints]
workspace = true
